# tcp-server

./: .gitignore
client-src/: CMakeLists.txt
client-src/client/: CMakeCache.txt  Doxyfile.doxygen  Makefile  client  cmake_install.cmake  compile_commands.json  not-a-virus.txt  trojan-horse.txt
client-src/client/html/: annotated.html  classes.html  client_8h.html  client_8h__dep__incl.map  client_8h__dep__incl.md5  client_8h__incl.map  client_8h__incl.md5  client_8h_source.html  comm_8h.html  comm_8h__incl.map  comm_8h__incl.md5  comm_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  error_8h.html  error_8h__incl.map  error_8h__incl.md5  error_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  structclient__settings.html  util_8h.html  util_8h_source.html
client-src/client/html/search/: all_0.js  all_3.js  all_4.js  classes_0.js  files_0.js  functions_0.js  functions_2.js  searchdata.js  variables_0.js
client-src/include/: client.h  comm.h  error.h  util.h
client-src/src/: client.c  comm.c  error.c  main.c  util.c
server-src/: CMakeLists.txt
server-src/include/: comm.h  error.h  save.h  server.h  util.h
server-src/server/: CMakeCache.txt  Doxyfile.doxygen  Makefile  cmake_install.cmake  compile_commands.json  server
server-src/server/html/: annotated.html  classes.html  comm_8h.html  comm_8h__incl.map  comm_8h__incl.md5  comm_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  error_8h.html  error_8h__incl.map  error_8h__incl.md5  error_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  save_8h.html  save_8h__incl.map  save_8h__incl.md5  save_8h_source.html  server_8h.html  server_8h__dep__incl.map  server_8h__dep__incl.md5  server_8h__incl.map  server_8h__incl.md5  server_8h_source.html  structserver__settings.html  util_8h.html  util_8h__incl.map  util_8h__incl.md5  util_8h_source.html
server-src/server/html/search/: all_1.js  all_3.js  all_5.js  all_7.js  all_9.js  classes_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
server-src/src/: comm.c  error.c  main.c  save.c  server.c  util.c
